2025-04-20  Bruno Haible  <bruno@clisp.org>

	Fix typo in comment.
	Reported by Frank Wojcik.
	* src/search.cc (Search::find_asso_values): Fix typo in comment.

2025-04-20  Bruno Haible  <bruno@clisp.org>

	Use an array-list instead of a linked-list of equiv.-classes, part 2.
	* src/search.cc (Search::compute_partition): Fix a memory leak.

2025-04-20  Bruno Haible  <bruno@clisp.org>

	Use a hash table in compute_partition, part 2.
	* src/search.cc (Search::compute_partition): Fix a memory leak.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	Optimize: Test large equivalence classes for conflict first.
	This reduces the execution time of gperf on large inputs by ca. 10%.
	* src/search.cc (cmp_equiv_classes): New function.
	(compute_partition): Sort the equivalence classes according to
	decreasing size.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	Refactor: Use an array-list instead of a linked-list of equiv.-classes.
	* src/search.h (Search::compute_partition): Return a 'Partition *', not
	a 'EquivalenceClass *'.
	(Search::count_possible_collisions, Search::unchanged_partition): Change
	parameter from 'EquivalenceClass *' to 'Partition *'.
	* src/search.cc (struct EquivalenceClass): Remove field _next.
	(struct Partition): New type.
	(struct Step): Change type of _partition from 'EquivalenceClass *' to
	'Partition *'.
	(Search::compute_partition): Return a 'Partition *', not a
	'EquivalenceClass *'.
	(delete_partition): Update.
	(Search::count_possible_collisions, Search::unchanged_partition): Change
	parameter from 'EquivalenceClass *' to 'Partition *'.
	(Search::find_asso_values): Update.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	Optimize: Use an array-list instead of a linked-list of keywords.
	Storing list elements in contiguous memory means: less cache misses.
	This reduces the execution time of gperf on large inputs by ca. 30%.
	* src/arraylist.h: New file.
	* src/arraylist.cc: New file.
	* src/Makefile.in (OBJECTS): Add arraylist.$(OBJEXT).